--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -50,9 +50,13 @@ h1 {
   padding: 5px;
 }
 
+.sort-icon:hover {
+  background-color: rgba(162, 164, 170, 0.075);
+}
+
 .container {
   width: 800px;
-  height: 82vh;
+  height: 80vh;
   overflow-y: scroll;
   overflow-x: hidden;
   margin: auto;
@@ -102,11 +106,6 @@ h1 {
   position: relative;
 }
 
-.image-div img {
-  max-height: 200px;
-  max-width: 368px;
-}
-
 .image-div::after {
   content: '';
   background-color: #1a1b1b;
@@ -117,6 +116,11 @@ h1 {
   right: -38px;
   -webkit-clip-path: polygon(0 0, 50% 50%, 0 100%);
           clip-path: polygon(0 0, 50% 50%, 0 100%);
+}
+
+.image-div img {
+  max-height: 200px;
+  max-width: 368px;
 }
 
 .image-title {
