--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -20,11 +20,14 @@ h1 {
   background-color: rgba(162, 164, 170, 0.212);
   border-radius: 5px;
   padding: 5px;
+  &:hover {
+    background-color: rgba(162, 164, 170, 0.075);
+  }
 }
 
 .container {
   width: 800px;
-  height: 82vh;
+  height: 80vh;
   overflow-y: scroll;
   overflow-x: hidden;
   margin: auto;
@@ -35,19 +38,19 @@ h1 {
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: auto;
   row-gap: 10px;
-}
-.container::-webkit-scrollbar {
-  width: 1em;
-}
+  &::-webkit-scrollbar {
+    width: 1em;
+  }
 
-.container::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
 
-.container::-webkit-scrollbar-thumb {
-  background-color: rgba(92, 55, 7, 0.836);
-  border-radius: 2px;
-  outline: 1px solid slategrey;
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(92, 55, 7, 0.836);
+    border-radius: 2px;
+    outline: 1px solid slategrey;
+  }
 }
 
 .image-title,
@@ -56,25 +59,26 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+
 .image-div {
   background-color: $dark-color;
   padding: 5px;
-  width: $image-div-size;
+  width: 378px;
   position: relative;
+  &::after {
+    content: '';
+    background-color: $dark-color;
+    display: block;
+    height: 60px;
+    width: 40px;
+    position: absolute;
+    right: -38px;
+    clip-path: polygon(0 0, 50% 50%, 0 100%);
+  }
   img {
     max-height: 200px;
     max-width: 368px;
   }
-}
-.image-div::after {
-  content: '';
-  background-color: $dark-color;
-  display: block;
-  height: 60px;
-  width: 40px;
-  position: absolute;
-  right: -38px;
-  clip-path: polygon(0 0, 50% 50%, 0 100%);
 }
 
 .image-title {
@@ -92,6 +96,7 @@ h1 {
   text-align: center;
   padding-bottom: 10px;
 }
+
 @media (max-width: 810px) {
   .container {
     width: 95vw;
